src/objects/Approval_List__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Link__c</fullName>
        <label>Approval Link</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <label>Link to Record</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Name__c</fullName>
        <label>Record Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Link__c</fullName>
        <label>User Link</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ALN-{0000}</displayFormat>
        <label>Approval List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>